# compress

./: .gitignore  AGENTS.md  AP.md  AP_ORCHESTRATOR.md  AP_WORKER.md  BOOT.md  BRAIN.md  CHAT.md  COORDINATOR_PROTOCOL.md  NEXT_AGENT.md  NEXT_ORCHESTRATOR.md  NEXT_WORKER.md  README.md  co.txt  deep-research-report-1.md  deep-research-report-2.md  pyproject.toml
docs/: research_plan.md
scripts/: ap_chat_append.fish  ap_cycle_close.fish  ap_rpc_call.fish  ap_rpc_handle_next.fish  ap_rpc_request.fish  ap_snapshot.fish
src/primesymbolicmdl/: __init__.py  anchor_laws.py  ap_rpc.py  gui.py  (+36 more)
tests/: conftest.py  test_anchor_laws.py  test_ap_rpc.py  test_bitcost.py  test_bitstream.py  test_blocks.py  test_codec_roundtrip.py  test_evolution.py  test_experiments.py  test_gui_import.py  test_huge_anchor_binary.py  test_huge_anchor_binary_demo.py  test_huge_anchor_branch.py  test_huge_anchor_corpus_benchmark.py  test_huge_anchor_datasets.py  test_huge_anchor_demo.py  test_huge_anchor_file_benchmark.py  test_huge_anchor_file_cli.py  test_huge_anchor_models.py  test_huge_anchor_search.py  test_huge_blocks.py  test_image_ablation.py  test_image_context_laws.py  test_image_datasets.py  test_image_gplite_optimizer.py  test_image_law_branch.py  test_image_predictor_branch.py  test_image_predictor_optimizer.py  test_image_predictors.py  test_image_soma_optimizer.py  test_index_branch.py  test_law_demo.py  test_law_search.py  test_optimizers.py  test_prime_anchors.py  test_prime_bigint.py  test_random_sanity.py  test_repository_rules.py  test_residual_binary.py  test_residual_codecs.py  (+5 more)
(+9 files in other folders)
